[project]
name = "easypipe"
version = "0.1.0"
description = "XYZ"
readme = "README.md"
authors = [
    { name = "Alessandro Finamore", email = "finale80@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.9.0",
    "pytest>=9.0.2",
]
